# maplab

applications/mr-mapping/: CMakeLists.txt  package.xml
applications/mr-mapping/app/: mr-mapping-app.cc
applications/mr-mapping/src/: rovioli-node.cc
