<?xml version="1.0" encoding="UTF-8"?>
<package format="2">
  <name>mr-mapping</name>
  <version>0.0.0</version>
  <description>
    Multi-Robot mapping application which runs ROVIOLI and integrates created maps and map data from other robots.
  </description>
  <maintainer email="boroson@usc.edu">boroson</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>aslam_cv_pipeline</depend>
  <depend>cv_bridge</depend>
  <depend>end_to_end_common</depend>
  <depend>feature_tracking</depend>
  <depend>gflags_catkin</depend>
  <depend>glog_catkin</depend>
  <depend>localization_summary_map</depend>
  <depend>loop_closure_handler</depend>
  <depend>maplab_common</depend>
  <depend>mapping_workflows_plugin</depend>
  <depend>message_flow</depend>
  <depend>online_map_builders</depend>
  <depend>rovio</depend>
  <depend>sensors</depend>
  <depend>vi_map</depend>
  <depend>vi_mapping_test_app</depend>
  <depend>vio_common</depend>
  <depend>visualization</depend>
</package>
